--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "node-ssh",
-  "version": "11.1.1",
-  "description": "SS2 with Promises",
+  "name": "@termftp/node-ssh",
+  "version": "11.1.3",
+  "description": "SSH2 with Promises",
   "main": "lib/cjs/index.js",
   "typings": "lib/typings/index.d.ts",
   "module": "lib/esm/index.mjs",
   "exports": {
     ".": {
-      "import": "./lib/esm/index.mjs",
+      "import": "./lib/cjs/index.js",
       "require": "./lib/cjs/index.js"
     },
     "./package.json": "./package.json"
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "ava",
     "lint": "(tsc -p . --noEmit) && (eslint . --ext .ts) && (prettier --list-different src/*.ts)",
-    "prepare": "yarn build:clean ; yarn build:cjs ; yarn build:esm ; yarn build:typings",
+    "prepare": "npm run build:clean && npm run build:cjs && npm run build:esm && npm run build:typings",
     "build:clean": "rm -rf lib",
     "build:esm": "tsc --module es2015 --target es2018 --outDir lib/esm && mv lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "tsc --module commonjs --target es2018 --outDir lib/cjs",
@@ -24,22 +24,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/steelbrain/node-ssh.git"
+    "url": "git+https://github.com/TermFTP/node-ssh.git"
   },
   "keywords": [
     "ssh",
     "ssh2",
     "sftp"
   ],
-  "author": "steelbrain",
+  "author": "TheCrether",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/steelbrain/node-ssh/issues"
+    "url": "https://github.com/TermFTP/node-ssh/issues"
   },
   "files": [
     "lib/*"
   ],
-  "homepage": "https://github.com/steelbrain/node-ssh#readme",
+  "homepage": "https://github.com/TermFTP/node-ssh#readme",
   "devDependencies": {
     "@types/shell-escape": "^0.2.0",
     "@types/ssh2": "^0.5.43",
