--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "jsx": "preserve",
-    "module": "CommonJS",
+    "module": "esnext",
     "esModuleInterop": true,
     "strictNullChecks": true,
     "resolveJsonModule": true,
@@ -10,7 +10,7 @@
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "lib": ["es2015", "es2016", "es2017", "es2018", "esnext"]
+    "lib": ["es2016", "es2017", "es2018", "esnext"]
   },
   "include": ["src"],
   "exclude": [
