--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@termftp/node-ssh",
-  "version": "11.1.3",
+  "version": "11.1.4",
   "description": "SSH2 with Promises",
   "main": "lib/cjs/index.js",
   "typings": "lib/typings/index.d.ts",
-  "module": "lib/esm/index.mjs",
+  "module": "lib/cjs/index.js",
   "exports": {
     ".": {
       "import": "./lib/cjs/index.js",
